# bcollect

./: COPYING  Makefile  Makefile.am  TODO  autogen.sh  backup.c  configure.ac  flock.c  main.c  rmdir.c  rmfr.c  sample.conf
confparser/: Makefile  Makefile.am  conffuncs.c  conflexer.l  confparser.l  confparser.y  verifyconf.c
examples/: Makefile.am  bcollect.conf
include/: Makefile  Makefile.am  bcollect.h  flock.h  genconfig.sh
scripts/: dist.sh  genconfig.sh
